--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@mui/icons-material": "^5.14.18",
     "@mui/material": "^5.14.18",
     "@mui/styled-engine-sc": "^6.0.0-alpha.6",
+    "@stripe/react-stripe-js": "^2.4.0",
+    "@stripe/stripe-js": "^2.2.0",
     "@tanstack/react-query": "^5.8.7",
     "axios": "^1.6.2",
     "firebase": "^10.6.0",
@@ -28,6 +30,7 @@
     "react-dom": "^17.0.0 || ^18.0.0",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.20.0",
+    "recharts": "^2.10.1",
     "sort-by": "^1.2.0",
     "styled-components": "^6.1.1",
     "sweetalert2": "^11.10.1",
