--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
     "moment": "^2.29.4",
     "react": "^17.0.0 || ^18.0.0",
     "react-dom": "^17.0.0 || ^18.0.0",
+    "react-helmet": "^6.1.0",
     "react-hot-toast": "^2.4.1",
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-list": "^0.8.17",
     "react-router-dom": "^6.20.0",
     "recharts": "^2.10.1",
     "sort-by": "^1.2.0",
